# advent-of-code

./: .gitignore  LICENSE  README.md  challenge_template.txt  precommit  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/workflows/: build.yml
aoc/: __init__.py  common.py  day1.py
aoc_cas/: __init__.py  cli.py  common.py  util.py
aoc_cas/2018/: day_10.py  day_11.py  day_13.py  day_14.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_9.py
aoc_cas/aoc2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_cas/aoc2016/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_cas/aoc2018/: day_1.py  day_10.py  day_11.py  day_12.py  day_14.py  day_4.py  day_6.py  day_7.py  day_8.py  day_9.py  utils.py
aoc_cas/aoc2019/: IntCodeComputer.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day24.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
aoc_cas/aoc2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc_cas/aoc2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
aoc_cas/aoc2022/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  template.py
aoc_cas/aoc2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  (+7 more)
src/: __init__.py
test/: test_day1.py  test_day4.py
tests/: test_examples.py
(+191 files in other folders)
