[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ted Cassirer <ted.cassirer@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_cas"}]

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
black = "^23.11.0"
numpy = "^1.26.2"
pytest = "^7.4.3"
poetry = "^1.7.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
aoccas = "aoc_cas.cli:run_one"

[tool.poetry.plugins."adventofcode.user"]
aoccas = "aoc_cas:plugin"

[tool.pytest.ini_options]
testpaths = "tests/"

