[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Ted Cassirer <ted.cassirer@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_cas"}]

[tool.poetry.dependencies]
python = "^3.13"
advent-of-code-data = "^2.0.1"
black = "^23.11.0"
numpy = "^2.1"
pytest = "^7.4.3"
poetry = "^2.0.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.scripts]
aoccas = "aoc_cas.cli:main"

[tool.poetry.plugins."adventofcode.user"]
cas = "aoc_cas:plugin"

[tool.pytest.ini_options]
testpaths = "tests/"
